<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CryPhoto</string>
    <string name="action_settings">设定</string>
    <string name="title_activity_tester">TesterActivity</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="string_IDs"></string-array>
    <!-- Navigation drop down list -->
    <string-array name="dropDownMenu">
        <item>全部</item>
        <item>相册</item>
        <item>指定日期</item>
        <item>一周之内</item>
        <item>一个月之内</item>
    </string-array>

    <!-- Action Bar Strings -->
    <string name="btn_send_message">Send Message</string>

    <!-- Activity titles -->
    <string name="activity_location_found">Location Found</string>

    <!-- Action Bar action items -->
    <string name="action_search">搜索</string>
    <string name="action_photo">拍照</string>
    <string name="action_restore">还原</string>
    <string name="action_help">帮助</string>

    <!-- Unused Strings -->
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">刷新</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_check_updates">Check for Updates</string>
    <string name="action_sync">同步</string>

    <!-- Search -->
    <string name="search_hint">搜索照片...</string>

    <!-- Indivdual View Values -->
    <string name="action_share">分享</string>
    <string name="action_discard">删除</string>
    <string name="action_getPhotoInfo">信息</string>

    <!-- New CAB Values -->
    <string name="helloTextView">Hello world!</string>
    <string name="menu_context_title">照片已选择</string>
    <string name="check">检查</string>
    <string name="menu_context_increase">分享</string>
    <string name="menu_context_condensed_increase">Share</string>
    <string name="menu_context_decrease">删除</string>
    <string name="menu_context_condensed_decrease">删除</string>
    <string name="promptmessage"></string>
    <string name="editText_prompt"></string>
    <string name="action_add_album">新建相册</string>

    <!-- New spinner -->
    <string name="context">Choose a chocolate</string>

    <string-array name="views">
        <item>Grid View</item>
        <item>Albums</item>
        <item>Recents</item>
        <item>Particular Dates</item>
    </string-array>

    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_app_start">CryPhoto</string>

</resources>
