<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.photoapp.AlbumActivity" 
	android:textColor="@android:color/white">
    <!-- Add new Album -->
    <item android:id="@+id/action_add_album"
          android:icon="@drawable/ic_action_add_to_queue"
          android:title="@string/action_add_album"
          android:showAsAction="always" />
    
    <!-- Sync -->
    <item android:id="@+id/action_sync"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_sync" 
          android:showAsAction="always"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
